# di_tella_2004_replication

./: .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: di_tella_2004_replication.tex  di_tella_2004_replication_pres.tex  refs.bib  task_paper.py
src/di_tella_2004_replication/: __init__.py
src/di_tella_2004_replication/analysis/: crime_by_bloc_stats.py  crime_by_block_analysis.py  crime_by_block_stats.py  model.py  monthly_panel_regression.py  monthly_panel_stats.py  task_analysis.py  weekly_panel_regression.py
src/di_tella_2004_replication/data_management/: __init__.py  clean_MonthlyPanel.py  clean_WeeklyPanel.py  clean_crime_by_block.py  clean_data.py  task_data_management.py
src/di_tella_2004_replication/final/: __init__.py  task_final.py
tests/analysis/: test_crimebyblock_analysis.py  test_model.py  test_monthly_analysis.py  test_predict.py  test_weekly_analysis.py
tests/data_management/: test_clean_MonthlyPanel.py  test_clean_WeeklyPanel.py  test_clean_crime_by_block.py  test_clean_data.py
