[metadata]
name = di_tella_2004_replication
description = Replication exercise of Di Tella and Schargrodsky (2004)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/erikoc/di_tella_2004_replication
author = Erik Ortiz Covarrubias & José Raúl Luyando Sánchez
author_email = erik.covarru@gmail.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/erikoc/di_tella_2004_replication
    Documentation = https://github.com/erikoc/di_tella_2004_replication
    Github = https://github.com/erikoc/di_tella_2004_replication
    Tracker = https://github.com/erikoc/di_tella_2004_replication/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/di_tella_2004_replication/_version.py
